<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_fragment_rules"
        android:icon="@drawable/rules"
        android:title="@string/rules" />
    <item
        android:id="@+id/nav_fragment_about"
        android:icon="@drawable/android"
        android:title="@string/about" />
</menu>